--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,26 +32,21 @@
             android:layout_weight="1"
             />
     </LinearLayout>
-
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/input_layout">
-
-        <!--<fragment-->
-            <!--android:id="@+id/fragment"-->
-            <!--android:name="edu.uw.fragmentdemo.MovieListFragment"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"/>-->
+        android:layout_height="match_parent">
 
     </FrameLayout>
-
-    <!--<ListView-->
-        <!--android:id="@+id/list_view"-->
+    <!--<fragment-->
+        <!--android:id="@+id/fragment"-->
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="match_parent"-->
-        <!--android:layout_below="@id/input_layout"-->
-        <!--/>-->
-
+        <!--android:name="edu.uw.fragmentdemo.MoviewListFragment"/>-->
+    <ListView
+        android:id="@+id/list_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/input_layout"
+        />
 </RelativeLayout>
